Changed methods of rename session to avoid use Unretained(this)

This CL makes the calls to GetSessionList and DoRenameSession safe as
was noted in CL 929754.

Bug: 830913
Change-Id: I7ad22b5712e032f256bd46ae9f04c28255861af7
Reviewed-on: https://chromium-review.googlesource.com/996472
Commit-Queue: Martin Rodriguez <rodmartin@google.com>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549532}
Former-commit-id: 1bc236e6c7d8667c7336ec80468fa9e8b529b4b3