chrome/browser/ui/webui/policy_tool_ui_browsertest.cc
@@ -25,6 +25,19 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/browser/web_contents.h"
 #include "content/public/test/browser_test_utils.h"
 
+namespace {
+
+const base::FilePath::CharType kPolicyToolSessionsDir[] =
+    FILE_PATH_LITERAL("Policy sessions");
+
+const base::FilePath::CharType kPolicyToolDefaultSessionName[] =
+    FILE_PATH_LITERAL("policy");
+
+const base::FilePath::CharType kPolicyToolSessionExtension[] =
+    FILE_PATH_LITERAL("json");
+
+}  // namespace
+
 class PolicyToolUITest : public InProcessBrowserTest {
  public:
   PolicyToolUITest();
@@ -71,15 +84,15 @@ base::FilePath PolicyToolUITest::GetSessionsDir() {
   base::FilePath profile_dir;
   EXPECT_TRUE(PathService::Get(chrome::DIR_USER_DATA, &profile_dir));
   return profile_dir.AppendASCII(TestingProfile::kTestUserProfileDir)
-      .Append(PolicyToolUIHandler::kPolicyToolSessionsDir);
+      .Append(kPolicyToolSessionsDir);
 }
 
 base::FilePath::StringType PolicyToolUITest::GetDefaultSessionName() {
-  return PolicyToolUIHandler::kPolicyToolDefaultSessionName;
+  return kPolicyToolDefaultSessionName;
 }
 
 base::FilePath::StringType PolicyToolUITest::GetSessionExtension() {
-  return PolicyToolUIHandler::kPolicyToolSessionExtension;
+  return kPolicyToolSessionExtension;
 }
 
 base::FilePath PolicyToolUITest::GetSessionPath(
